NetBSD Problem Report #50641

From www@NetBSD.org  Sun Jan 10 20:12:26 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id DBE8D7AC9D
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 10 Jan 2016 20:12:26 +0000 (UTC)
Message-Id: <20160110201225.D39337ACB6@mollari.NetBSD.org>
Date: Sun, 10 Jan 2016 20:12:25 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/aarch64/include/db_machdep.h:67: possible bad if test ?
X-Send-Pr-Version: www-1.0

>Number:         50641
>Category:       port-arm
>Synopsis:       src/sys/arch/aarch64/include/db_machdep.h:67: possible bad if test ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 10 20:15:01 +0000 2016
>Closed-Date:    Mon Jan 11 08:28:38 +0000 2016
>Last-Modified:  Mon Jan 11 08:28:38 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160110
>Organization:
>Environment:
>Description:
[src/sys/arch/aarch64/include/db_machdep.h:67]: (style) Expression '(X & 0xfc000000) == 0x92000000' is always false.

Source code is


    return (insn & 0xfc000000) == 0x92000000    /* bl */

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50641 CVS commit: src/sys/arch/aarch64/include
Date: Mon, 11 Jan 2016 07:46:15 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Mon Jan 11 07:46:15 UTC 2016

 Modified Files:
 	src/sys/arch/aarch64/include: db_machdep.h

 Log Message:
 PR port-arm/50641: src/sys/arch/aarch64/include/db_machdep.h:67: possible bad if test ?

 Fix the bl instruction test.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/arch/aarch64/include/db_machdep.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Mon, 11 Jan 2016 08:28:38 +0000
State-Changed-Why:
I committed a fix


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.