PR port-arm/50641: src/sys/arch/aarch64/include/db_machdep.h:67: possible bad if test ?

Fix the bl instruction test.